add Service entity